DisplayConfigurator::SetInitialDisplayPower - remove DCHECK

Bug: http://crbug.com/800925
Change-Id: I83b0282c069da427111fa546168474eacfc2be24